# llm-data-analyst

./: AGENTS.md  README.md
client/: .env.example  README.md  eslint.config.js  package-lock.json  package.json
client/src/: App.tsx  index.css
server/: .env-example  .env.example  README.md  auth.py  config.py  event_schema.py  llm_service.py  main.py  pyproject.toml  schemas.py
server/api/v1/routes/: __init__.py  conversations.py  db_connections.py  debug.py  mappings.py  query.py  step_logs.py  users.py  worker.py
server/db/: database.py
server/db/adapters/: __init__.py  base.py  sql.py
server/redis/: fly.toml
server/schemas/: __init__.py  common.py  conversation.py  db_connection.py  llm.py  semantic_mapping.py  user.py  workflow_step_log.py
server/scripts/: migrate_passwords.py
server/semantic/: mapper.py
server/services/: agent_run_service.py  checkpoint_service.py  conversation_service.py  db_connection_service.py  llm_service.py  logging_service.py  prompt_wrapper.py  semantic_mapping_service.py  step_log_service.py  user_service.py  workflow_run_service.py  workflow_step_service.py
server/tests/: test_prompt_wrapper.py  test_semantic_mapper.py
server/worker/: .env.example  __init__.py  fly.toml  redis_bus.py  stream.py
server/workflows/: __init__.py  ai_workflow.py  base.py  checkpointer.py
server/workflows/steps/: clarification.py  data_retrieval.py  intent_understanding.py  monitoring.py  prompt_intake.py  response_generation.py  result_validation.py  task_execution.py  task_planning.py  text_generation.py  visualization_spec.py
(+19 files in other folders)
